project description page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="right">
                 <ul class="nav-links">
                     <li><a href="">Home</a></li>
-                    <li><a href="people2.html">About Us</a></li>
+                    <li><a href="">About Us</a></li>
                     <li><a href="">Projects</a></li>
                     <li><a href="">Publications</a></li>
                     <li><a href="">Blog</a></li>
